<resources>
    <string name="app_name">Wellnest One</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="by_continuing_you_agree_to_terms_of_services">By continuing you agree to <u>terms of services</u></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="current_location">Current Location</string>
    <string name="search">Search</string>
    <string name="select_country">Select Country</string>
    <string name="otp_sent_msg">We have sent one time verification code to your registered mobile number</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="lastname_ast">Last Name*</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="birthdate_ast">Birthdate*</string>
    <string name="select_bday">Select Birthdate</string>
    <string name="email_address_ast">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="sex_ast">Sex*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="feet">Ft</string>
    <string name="cms">Cm</string>
    <string name="kg_label">Kg</string>
    <string name="lbs_label">Lbs</string>
    <string name="new_recording">New Recording</string>
    <string name="search_recording">Search Recordings</string>
    <string name="click_here_to_record_ecg">Click here to record ECG</string>
    <string name="degree_of_smoking">Degree Of Smoking</string>
    <string name="degree_of_tobacco">Degree of Tobacco</string>
    <string name="level_of_exercise">Level of Exercise</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="Press_hold"><![CDATA[Press & hold power button until\nyou see blinking lights on Wellnest 12L\u00AE]]></string>
    <string name="pair_a_device">Pair a Device</string>
    <string name="no_results">No Results</string>
    <string name="no_recordings">No Recordings</string>
    <string name="select_wellnest">Select Wellnest 12L\u00AE\nfrom the list to connect</string>
    <string name="privatekey_error">You need to connect to internet at-least once before taking recording</string>
    <string name="pair">Pair</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="let_s_get_started">Let’s get started...</string>
    <string name="please_tell_us_about_symptoms_that_your_are_feeling_check_all_that_apply">Please tell us about symptoms that your are feeling. Check all that apply.</string>

    <string name="routine_check_up">Routine Check-up</string>
    <string name="pre_opreative_assessment">Pre-operative Assessment</string>
    <string name="pre_life_insurance">Pre-life Insurance</string>
    <string name="pre_mediclaim">Pre-Mediclaim</string>
    <string name="pre_employment">Pre-employment</string>
    <string name="symptomatic">Symptomatic</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="uneasiness">Uneasiness</string>
    <string name="jaw_pain">Jaw Pain</string>
    <string name="upper_back_pain">Upper Back Pain</string>
    <string name="palpitation">Palpitation</string>
    <string name="vomiting">Vomiting</string>
    <string name="unexplained_perspiration">Unexplained Perspiration</string>
    <string name="breathlessness">Breathlessness</string>
    <string name="on_exertion_while_resting_both">On Exertion/while Resting/both</string>
    <string name="record_ecg">Record ECG</string>
    <string name="reffered_by">Referred By</string>
    <string name="link_patient">LINK REPORT</string>
    <string name="gender_age">Gender | Age</string>
    <string name="test_date">Date</string>
    <string name="indication">Indication</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="no_indication">No Indication</string>
    <string name="discard_ecg">This ECG will not be saved and you will not be able to retrieve it in the future. In order to refer to the ECG later, please link patient profile.</string>
    <string name="re_record">RE-RECORD</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="rec_record_ecg_message">Do you want to Re-record ECG?</string>
    <string name="add_member">Add Member</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="share">Share</string>
    <string name="get_ecg_analysis">Get ECG Analysis</string>
    <string name="reupload_msg">There was an issue uploading your recording.</string>
    <string name="reupload">Re-upload</string>
    <string name="discard">Discard</string>
    <string name="recommendations">Recommendations</string>
    <string name="findings_interpretation">Findings Interpretation</string>
    <string name="ecg_findings">ECG Findings</string>
    <string name="condition">Condition</string>
    <string name="_12_lead_simultaneous_ecg_report">12 lead simultaneous ECG Report</string>
    <string name="name">Name</string>

    <string name="L1">L1</string>
    <string name="L2">L2</string>
    <string name="L3">L3</string>
    <string name="avR">AVR</string>
    <string name="avL">AVL</string>
    <string name="avF">AVF</string>
    <string name="v1">V1</string>
    <string name="v2">V2</string>
    <string name="v3">V3</string>
    <string name="v4">V4</string>
    <string name="v5">V5</string>
    <string name="v6">V6</string>


    <string name="urgent_action_required">Urgent Action Required</string>
    <string name="action_required_not_urgent">Action Required (Not Urgent)</string>
    <string name="no_action_required">No Action Required</string>
    <string name="one">ONE</string>
    <string name="thanks_for_getting_in_touch">Thanks for getting in touch!</string>
    <string name="our_team_will_get_back_to_you_shortly_have_a_nice_day">Our team will get back to you shortly. Have a nice day.</string>
    <string name="for_more_details_visit_www_wellnest_tech">For more details visit <u>www.wellnest.tech</u></string>
    <string name="channel_name">Wellnest One Notification</string>

    <string name="ecg_analysis_msg">The ECG will be shared with Wellnest’s board of trained physicians and cardiologists for review. You will receive a report within 20 minutes.</string>
    <string name="swipe_1_txt">Swipe to see how to wear belt</string>
    <string name="swipe_2_txt">Raise arms and place belt with V1 and V2\nsymmetrically on the sternal line</string>
    <string name="swipe_3_txt">Lower arms and adjust the flaps</string>
    <string name="swipe_4_txt">Close the buckle flaps over V1 and V2</string>

</resources>