<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_gray_bkg"
        tools:context=".activities.WelcomeActivity">

        <ImageView
            android:id="@+id/tvWellNest"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/one_logo"
            app:tint="#9F9F9F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvWellNest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvWellNest"
            app:srcCompat="@drawable/ic_close" />


        <TextView
            android:id="@+id/tvHint"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/thanks_for_getting_in_touch"
            android:textColor="@color/title_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/helvetica"
            android:text="@string/our_team_will_get_back_to_you_shortly_have_a_nice_day"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHint" />

        <TextView
            android:id="@+id/tvGetInTouch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/helvetica_bold"
            android:padding="4dp"
            android:text="@string/for_more_details_visit_www_wellnest_tech"
            android:textColor="#666666"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>