<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/add_member"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/helvetica"
            android:text="Enter basic information. Please fill this form to add new member."
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="Name*"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:fontFamily="@font/helvetica"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:padding="4dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/textView33"
            app:layout_constraintEnd_toEndOf="@+id/textView32"
            app:layout_constraintStart_toEndOf="@+id/textView33"
            app:layout_constraintTop_toTopOf="@+id/textView33" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#EEEEEE"
            app:layout_constraintEnd_toEndOf="@+id/edName"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@id/edName" />


        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="Age*"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <EditText
            android:id="@+id/edAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="@string/enter_age"
            android:inputType="text"
            android:padding="4dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintEnd_toEndOf="@id/divider1"
            app:layout_constraintStart_toEndOf="@id/textView34"
            app:layout_constraintTop_toTopOf="@id/textView34" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#EEEEEE"
            app:layout_constraintEnd_toEndOf="@+id/edAge"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@id/edAge" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="Gender*"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/tgSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textSize="@dimen/font_size_16"
            app:borderRadius="5dp"
            app:checkedBackgroundColor="@color/black"
            app:checkedTextColor="@color/white"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView35"
            app:layout_constraintEnd_toEndOf="@id/divider2"
            app:layout_constraintStart_toEndOf="@+id/textView35"
            app:layout_constraintTop_toTopOf="@+id/textView35"
            app:textToggleCenter="@string/female"
            app:textToggleLeft="@string/male"
            app:textToggleRight="@string/other"
            app:toggleHeight="40dp"
            app:toggleWidth="110dp"
            app:uncheckedBackgroundColor="#EEEEEE"
            app:uncheckedTextColor="#333333" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#EEEEEE"
            app:layout_constraintEnd_toEndOf="@+id/tgSex"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@id/tgSex" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/helvetica_bold"
            android:text="Phone No"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <EditText
            android:id="@+id/edPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/helvetica"
            android:hint="Please Enter Phone"
            android:inputType="phone"
            android:padding="4dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/textView36"
            app:layout_constraintEnd_toEndOf="@+id/textView32"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toTopOf="@+id/textView36" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_btn"
            android:fontFamily="@font/helvetica_bold"
            android:text="SAVE"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/actionBarItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/textView31"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView31"
            app:srcCompat="@drawable/ic_close" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#EEEEEE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgClose" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
