<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.countrycode.CountryCodeActivity">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="back_button"
            android:src="@drawable/ic_back"
            android:background="?attr/actionBarItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:tint="@color/title_color" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/title_color"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/select_country"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bkg_countryedttext_state"
            android:hint="@string/search"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:inputType="text" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageFlag"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="@+id/edtSearch"
            app:layout_constraintTop_toBottomOf="@+id/edtSearch"
            />


        <TextView
            android:id="@+id/tvSelectedCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/helvetica_bold"
            android:textColor="@color/title_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageFlag"
            app:layout_constraintEnd_toStartOf="@+id/tvCurrentLocation"
            app:layout_constraintStart_toEndOf="@+id/imageFlag"
            app:layout_constraintTop_toTopOf="@+id/imageFlag" />

        <TextView
            android:id="@+id/tvCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:fontFamily="@font/helvetica_bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSelectedCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvSelectedCountry" />

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/color_surface_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageFlag" />

        <in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
            android:id="@+id/countryRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageFlag"
            app:layout_constraintTop_toBottomOf="@+id/tableRow"
            tools:listitem="@layout/item_country_code" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>